--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,13 +9,8 @@
          stopOnFailure="false"
          syntaxCheck="true"
          verbose="false"
-         bootstrap="vendor/autoload.php"
+         bootstrap="tests/bootstrap.php"
 >
-    <logging>
-      <log type="coverage-html" target="tests/phpunit_report/report" charset="UTF-8"
-           yui="true" highlight="false"
-           lowUpperBound="35" highLowerBound="70"/>
-    </logging>
     <php>
       <ini name="display_errors" value="on"/>
     </php>
